<resources>
    <string name="app_name">Layout-Suraj-Pheudin</string>
    <string name="edit_message">Enter a message</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="my_name">Suraj Pheudin</string>
    <string name="my_age">22 Years</string>
    <string name="my_address">Godawari, Lalitpur</string>
    <string name="my_email">pheudinsuraj@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="zero">0</string>







</resources>