<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayoutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="80dp"
            android:text="@string/name"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="@string/my_name"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="50dp"
            android:text="@string/age"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/textView5"
            android:text="@string/my_age"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="50dp"
            android:text="@string/address"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/textView7"
            android:text="@string/my_address"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="50dp"
            android:text="@string/email"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/textView9"
            android:text="@string/my_email"
            android:textSize="18dp" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="-115dp"
            android:text="Got It"
            android:onClick="backToMainPage"
            android:textColor="@color/white" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>